# zscaler-skill

./: .gitignore  .gitmodules  IMPROVEMENTS.md  LICENSE  LICENSE.md  PLAN.md  README.md  SKILL.md  pyproject.toml  renovate.json  windsurf-runtime-questions.md  zdx-snapshot.md  zia-reports-snapshot.md  zidentity-snapshot.md
.claude/agents/: z-verifier.md  z-writer.md
.claude/commands/: architect.md  investigate.md  researcher.md  z-audit.md  z-auditor.md  z-charter.md  z-identify.md  z-investigate.md  (+4 more)
.githooks/: pre-push
.windsurf/: cascade-response.md  claude-response-2.md  claude-response.md  concerns.md  conversation.md  test-questions.md
_data/: README.md
docs/: ZPA Reference.html  Zscaler Onboarding.html  _style-guide.md  cloud-connector.html  hub-topics.js  index.html  left-sidebar.js  nav.js  onboarding.html  readers-guide.html  site-drawer.js  site.css  source.html  styles.css  the-skill-kit.html  zia-forwarding.html  zia-reference.html  zpa-reference.html
evals/: evals.json
iac/: README.md
proposals/: windsurf-routing-and-fit-check.md
references/: _agent-patterns.md  _clarifications-sweep-2026-04.md  _clarifications.md  _coverage-audit-2026-04.md  _layering-model.md  _policy-simulation.md  _portfolio-map.md  _runbooks.md  _template.md  _verification-protocol.md  terraform.md
scripts/: README.md  ab-test-prompt.py  access-check.py  agent_patterns.py  check-citations.sh  check-doc-links.py  check-hygiene.py  check-orphans.py  check-scrape-freshness.py  check-staleness.sh  check-vendor-drift.py  connector-health.py  convert-pdf-sources.sh  diagnose-tenant.py  find-asymmetries.py  issue-watch.py  policy_simulator.py  refresh-automate-zscaler.sh  refresh-postman.sh  render-skill-pdf.py  render-skill-pdf.sh  run-evals.py  sandbox-check.py  simulate-policy.py  snapshot-refresh.py  splunk-query.sh  ssl-audit.py  url-lookup.py  zpa-app-check.py
(+281 files in other folders)
